--- a/package.json
+++ b/package.json
@@ -10,13 +10,26 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "directories": {
+    "lib": "lib"
+  },
+   "prisma": {
+        "seed": "dotenv -e .env node prisma/seed.js"
+    },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
-    "nodemon": "^2.0.15"
+    "@types/node": "^17.0.23",
+    "nodemon": "^2.0.15",
+    "prisma": "^3.12.0",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   },
   "dependencies": {
+    "@prisma/client": "^3.12.0",
+    "cors": "^2.8.5",
     "dotenv": "^14.3.2",
-    "express": "^4.17.2"
+    "express": "^4.17.3"
   }
 }
