--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cors": "^2.8.5",
     "dotenv": "^14.3.2",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0"
   }
 }
